Update the tooltip to not render off screen

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div class="bss-card__body" ng-controller="testController">
 				<div class="form-group">
 					<label>Assigned to (this input has a tooltip)</label>
-					<input type="text" bs-tooltip="This is the message">
+					<input type="text" bs-tooltip="This is the message" bs-tooltip-instant>
 				</div>
 			</div>
 		</div>
